<resources>
    <string name="app_name">DrinkWater</string>
    <string name="insert_water">Insert Water</string>
    <string name="total_water_already_today">Today:</string>
    <string name="total_water_all_today">Goal:</string>
    <string name="water_amount">Water amount:</string>
    <string name="comment_insert_water">Comment:</string>
    <string name="btn_insert_water_accept">Save</string>
    <string name="menuitem_settings">Settings</string>
    <string name="no_water_error">Adjust water amount!</string>
    <string name="settings">Settings</string>
    <string name="physically_active">Physically active:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="weight">Weight:</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female"></string>
    <string-array name="genders">
        <item>"Male"</item>
        <item>"Female</item>
    </string-array>
    <string-array name="drinks">
        <item>"Water"</item>
        <item>"Tea"</item>
        <item>"Green tea"</item>
        <item>"Coffe"</item>
        <item>"Soft drink"</item>
        <item>"Beer"</item>
        <item>"Juice"</item>
        <item>"Custom"</item>
    </string-array>
    <string name="menuitem_history">History</string>
    <string name="history_activity">My Water History</string>
    <string name="drink">Drink: </string>
    <string name="Daily_amount_of_water">Calculated daily amount: </string>
    <string name="view_my_waters">View my intake</string>
    <string name="activity_view_my_water">My water</string>
    <string-array name="graph_unit">
        <item>"5 days"</item>
        <item>"10 days"</item>
    </string-array>
    <string name="location_text">Your location: </string>
    <string name="current_weather_info">Current weather: </string>
    <string name="history_menu_5days">5 days</string>
    <string name="history_menu_10days">10 days</string>
    <string name="date">Date</string>
    <string name="Amount">Amount</string>
    <string name="Type">Type</string>
    <string name="preference_file_key">preference</string>

</resources>
