<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mj.drinkmorewater.Activities.SettingsActivity"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/colorLightPrimary">

<android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:clipChildren="true"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/genders"
                android:textAlignment="textEnd"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age_text"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age" />

            <SeekBar
                android:id="@+id/age_seekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100"
                android:thumb="@drawable/custom_thumb"
                android:progressTint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/age_textView"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="0 y" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weight_text"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"/>

            <SeekBar
                android:id="@+id/weight_seekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="150"
                android:thumb="@drawable/custom_thumb"
                android:progressTint="@color/colorPrimary"/>


            <TextView
                android:id="@+id/weight_textView"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="0 kg" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/physically_active_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/physically_active" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimary"/>


        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDailyAmount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Daily_amount_of_water" />

            <TextView
                android:id="@+id/txtDailyAmountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text=""
                android:gravity="right"/>


        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="" />



    </LinearLayout>
</android.support.constraint.ConstraintLayout>
