<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mj.drinkmorewater.Activities.MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/CircularProgressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cpb_background_progressbar_color="#cddfff"
                app:cpb_background_progressbar_width="5dp"
                app:cpb_progressbar_color="#1525d6"
                app:cpb_progressbar_width="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <TextView
                    android:id="@+id/txtTotalWater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_water_already_today"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtDataWaterToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtTotalWater1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_water_all_today"
                    android:textAlignment="center" />


                <TextView
                    android:id="@+id/txtDataWaterTotalToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_text"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtCurrentLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/txtWeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_weather_info"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtWeatherInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="43dp"
                android:layout_marginEnd="60dp"
                android:background="@color/colorPrimary"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_add_water" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>


</LinearLayout>
